--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -4,15 +4,22 @@ output:
   html_document:
     keep_md: true
 ---
-
-
-## Loading and preprocessing the data
-
+# Reproducible Research: Peer Assessment 1
+## Loading and preprocessing the data. 
+Some basic data exploration.
+First unzip activity.zip file.
+```{r}
+data=read.csv2("activity.csv",sep=",",header=TRUE)
+head(data)
+names(data)
+levels(as.factor(data$date))
+```
 
 
 ## What is mean total number of steps taken per day?
-
-
+```{r}
+mean(data$steps,na.rm=TRUE)
+```
 
 ## What is the average daily activity pattern?
 
